# HydraxMPM

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  zensical.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  run_tests.yml
about/: index.html
advance/custom_models/: index.html
analysis/: __init__.py
api/: index.html
api/config/: index.html
api/forces/: index.html
api/materials/: index.html
api/math/: index.html
api/nodes/: index.html
api/particles/: index.html
api/shapefunctions/: index.html
api/solvers/: index.html
basics/: index.html
benchmarks/: benchmark_usl.py
debug_exp/: shapefunction_test.ipynb
docs/: about.md  api.md  basics.md  extra.css  index.md  installing.md
docs/_static/: extra.css
docs/advance/: custom_models.md
docs/api/: config.md  materials.md  math.md  nodes.md  particles.md  shapefunctions.md  solvers.md
docs/examples/: two_sphere_impact.md
docs/how-tos/: initialize_material_points.md
docs/other/: animated_sip.py
docs/tutorials/: 1_granular_column.md
docs/usage/: index.md
examples/2D_basic/: alchimist_mixer.py  cubes_fall.py  cubes_fall_3D.py  morph.py
examples/3D_cube_fall/: cube_fall_rough_walls.py  cubes_bounce.py
examples/all/: test_examples.py
examples/chops2024/: mcc_flat.py  mcc_tilted.py  mu_i_flat.py  mu_i_tilted.py  water_flat.py  water_tilted.py
examples/collapse/: simple_collapse.py
examples/cpic/: cpic.py
examples/cube_fall/: cube_fall_rigid_particles.py  cube_fall_rough_walls.py  cubes_fall.py  cubes_fall_rigid.py  cubes_lift.py  multi_gpu_multi_phys.py
examples/dambreak/: dambreak.py  dambreak_apic.py  water.ipynb
examples/element_benchmarks/: drucker_prager.ipynb  linear_elastic.ipynb  modifiedcamclay.ipynb  mu_i_rheology.ipynb  simpleshear.ipynb  triaxial_compression.ipynb
examples/fsi/: fsi.py
examples/granular_collapse/: mcc.py
examples/granular_column/: dp_model.py  mcc_flat.py  mcc_tilted.py  mu_i_flat.py  mu_i_tilted.py  water_flat.py  water_tilted.py
examples/grid_sdf_test/: sdf_stl.py  view_sdf.py
examples/iacmag_2025/: mpm_collapse.py  mpm_collapse_plotall.py  mpm_collapse_plotval.py  mpm_postprcess_plot_all_models.py  mpm_postprocess_benchmark.py  sip_gradients.py  sip_pressure_control.py
examples/mixer/: 3dmixer.py  objects.py
examples/model_showcase/: sip_animate.py
examples/morph/: morph.py
examples/numpyro/: uq_constant_pressure_shear.py
examples/powders_grains_2025/: mpm_collapse.py  mpm_postprocess.py  sip_ramp_I.py
examples/sdf_example/: cubes_fall_3d.py  cubes_fall_classic.py  cubes_fall_mcc.py  sdf_fall.py  sdf_fall_3d.py  sdf_fall_rigid.py  sdf_fall_rigid_3d.py
examples/stl_morph/: make_sdf.py  morph_sdf_grid.py
examples/stl_test/: make_sdf.py  view_sdf.py
examples/trx/: infer_param.py  mcc.py
examples/two_sphere_impact/: delete_sphere_impact.py  index.html  paraview_draw.py  run.ipynb  run.py  two_spehere_impact.ipynb  two_sphere_impact.py  two_sphere_impact_save.py
examples/water/: water.ipynb
how-tos/initialize_material_points/: index.html
hydraxmpm/: __init__.py
hydraxmpm/common/: base.py  builder.py  rerun.py  rerun_old.py  sim_io.py  simstate.py  types.py  vtk_io.py
hydraxmpm/config/: ip_config.py  mpm_config.py
hydraxmpm/constitutive_laws/: JMPS.py  constitutive_law.py  druckerprager.py  exp_mu_i_csl.py  exp_mu_i_phi_i.py  exp_mu_i_phi_i_lc.py  isotropic_family_soil_models_inertia.py  linearelastic.py  modifiedcamclay.py  modifiedcamclay_nl.py  modifiedcamclay_nl_mu_i_phi_i.py  mu_i_lc.py  mu_i_lc_bck.py  mu_i_lc_phi_i.py  mu_i_lc_rm.py  mu_i_rheology.py  uh.py  (+2 more)
integration/: it_et_matrix.py  it_et_mcc.py  it_et_mu_i.py  it_et_p_control_shear.py
old_test/: test_cubic_shp.py  test_dirichletbox.py  test_gravity.py  test_interactions.py  test_linearelastic_mat.py  test_newtonfluid_mat.py  test_nodes_old.py  test_usl.py
pymudokon/: __init__.py
search/: search_index.json
test_pytest/: test_nodes.py  test_particles.py  test_shapefunctions.py
tests/: test_basecontrol.py  test_boundary.py  test_cubic_shp.py  test_dirichletbox.py  test_druckerprager.py  test_et_benchmarks.py  test_et_solver.py  test_examples.py  test_gravity.py  test_grid.py  test_interactions.py  test_linear_shp.py  test_linearelastic_mat.py  test_mapping.py  test_material_points.py  test_math_helpers.py  test_mix_control.py  test_modifiedcamclay.py  test_mpm_config.py  test_mpm_solver.py  test_mu_i_rheology.py  test_newtonfluid_mat.py  test_nodelevelset.py  test_nodes.py  test_nodewall.py  test_particle_damping.py  test_particles.py  test_rigid_body.py  test_rigidparticles.py  test_run_solver.py  test_shapefunctions.py  test_usl.py  test_usl_aflip.py  test_usl_apic.py
tutorials/: t1_granular_column.py  t1_granular_column_mcc.py  t1_granular_column_mrm_minimal.py  t1_granular_column_mu_i.py  t1_granular_column_old.py
usage/: index.html
(+354 files in other folders)
