[project]
name = "hydraxmpm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
authors = [
  {name = "Retief Lubbe", email = "r.lubbe@utwente.nl"},
  {name = "Hongyang Cheng", email = "h.cheng@utwente.nl"}]
license = {file = "LICENSE"}
keywords = ["jax", "material-point-method", "granular"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering",
    "Development Status :: 2 - Pre-Alpha"
]
urls = {repository = "https://github.com/GrainLearning/HydraxMPM" }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["hydraxmpm/*"]