[project]
name = "hydraxmpm"
version = "0.0.1"
description = "A simple Material Point Method solver in JAX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "equinox>=0.13.2",
    "jax>=0.8.2",
    "jaxtyping>=0.3.5",
    "scikit-image>=0.26.0",
    "typeguard==2.13.3",
    "vtk>=9.5.2",
    "rerun-sdk>=0.28.1",
    "optax>=0.2.6",
    "trimesh>=4.11.0",
    "mesh-to-sdf>=0.0.15",
]
authors = [
  {name = "Retief Lubbe", email = "r.lubbe@utwente.nl"},
  {name = "Hongyang Cheng", email = "h.cheng@utwente.nl"}]
license = {file = "LICENSE"}
keywords = ["jax", "material-point-method", "granular"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering",
    "Development Status :: 2 - Pre-Alpha"
]
urls = {repository = "https://github.com/GrainLearning/HydraxMPM" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.7.3",
    "mypy>=1.15.0",
    "pytest-cov>=6.0.0",
    "zensical>=0.0.15",
]
plot = [
    "matplotlib>=3.10.8",
    "pyvista[all]>=0.44.2",
    "vtk>=9.5.2",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["plot","dev"]

[tool.hatch.build]
include = ["hydraxmpm/*"]

[tool.hatch.build.targets.wheel]
packages = ["hydraxmpm"]




[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I001",  # isort
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "E741",  # ambiguous variable name
    "N806", # argument name should be lowercase
    "N803", # argument name should be lowercase
    "F811", # redefinition (e.g., constitutive_law: ConstitutiveLaw)
]
fixable = ["I001", "F401"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]


[tool.deptry]
exclude = ["examples", "not_tested",".venv","test","not_test","NotInclude"]
